# openclaw

./: # Code Citations.md  .antigravityrules  .auto-claude-security.json  .auto-claude-status  .bashrc  .claude_settings.json  .cspell.json  .cursorrules  .daedalus-status  .dockerignore  .env.example  .envrc  .gcloudignore  .gitattributes  .gitignore  .npmrc  .oxfmtrc.jsonc  .oxlintrc.json  .pre-commit-config.yaml  .secrets.baseline  .swiftformat  .swiftlint.yml  .trufflehog.yml  .vercelignore  777_2026-01-05-i-send-web-git-flow-main-priciples-sys.txt  AGENTS.md  AGENT_WORK_CONTRACT.md  APPROVAL_ROLE_WIZARD.md  ARCHITECTURE.md  ARCHITECTURE_REDESIGN.md  AUTOMATIONS-BRAINSTORM.md  BACKLOG.md  BIOLOGICAL_SYSTEM_OVERVIEW.md  BOOTSTRAP.md  BOT_COMPOSITION_FROM_CHAOS.md  BRIEF.md  CDOG_CONVERSION_REPORT.md  CHANGELOG-MODEL-ROUTING.md  CHANGELOG-cloudru.md  CHANGELOG.fr-FR.md  (+331 more)
.agent/: tool-surface-analysis.md
.ai.docs/: MERGE_PLAN.md
.beads/: issues.jsonl
.claude/: PROJECT_GUIDE.md  launch.json  settings.local.json
.clawdbot/: clawdbot.json
.clawdhub/: lock.json
.clawhub/: lock.json
.devcontainer/: start-systemd.sh
.docs/: evening-planner-backend-contract.md  giri-demo-scope.md  overlay-interaction-v0.md
.easyrunner/: docker-compose-app.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml  openclaw-vision.yaml  orchestrator-instructions.md  orchestrator-mode-instructions.md  pull_request_template.md
.gnupg/: pubring.kbx
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
clawd/: JOB.md  (+18 more)
rust/clawdbot-image-ops/: Cargo.toml
skills/ppl-gift/: README.md  SKILL.md  pyproject.toml
skills/ppl-gift/examples/: add_john_marquis.py
skills/ppl-gift/scripts/: ppl.py  setup.py
(+14830 files in other folders)
