[package]
name = "clawdbot-image-ops"
version = "0.1.0"
edition = "2021"
description = "High-performance image operations CLI for Clawdbot"
authors = ["Clawdbot Team"]
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Image processing - pinned to exact 0.24.9 to avoid 0.25+ which requires edition2024
image = { version = "=0.24.9", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
    "webp",
    "bmp",
    "ico",
    "tiff",
] }

# Error handling
anyhow = "1.0"

# JSON output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
# Optimize for size while maintaining performance
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols

[profile.release-fast]
inherits = "release"
opt-level = 3       # Optimize for speed instead
