[project]
name = "ppl-gift"
version = "1.0.0"
description = "ppl.gift CRM CLI - Comprehensive contact and relationship management"
authors = [
    {name = "Steve", email = "steve@withagency.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "requests>=2.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.8",
]